# sui-indexer

./: .gitignore  Cargo.toml  README.md  config.toml.example  libpq_mac.md
cli/: Cargo.toml  README.md
cli/src/: index_cmd.rs  main.rs
db/: Cargo.toml  diesel.toml
db/migrations/2025-04-15-093027_create_pools/: down.sql  up.sql
db/migrations/2025-04-17-102624_create_coins/: down.sql  up.sql
db/migrations/2025-04-17-103035_create_user_lendings/: down.sql  up.sql
db/migrations/2025-04-28-030930_create_navi_coins/: down.sql  up.sql
db/migrations/2025-04-28-065055_add_ema_price/: down.sql  up.sql
db/migrations/2025-05-01-015942_alter_pool_coins/: down.sql  up.sql
db/migrations/2025-05-02-152820_alter_table_lending/: down.sql  up.sql
db/migrations/2025-05-03-093423_alter_pool_tick_index/: down.sql  up.sql
db/migrations/2025-06-07-071656_alter_pool_next_tick_initialized/: down.sql  up.sql
db/migrations/2025-06-08-005240_create_pool_ticks/: down.sql  up.sql
db/migrations/2025-06-13-022400_create_lending_markets/: down.sql  up.sql
db/migrations/2025-06-14-065639_alter_user_lendings/: down.sql  up.sql
db/migrations/2025-06-18-030229_alter_pools_add_pool_type/: down.sql  up.sql
db/migrations/2025-06-20-100629_alter_lending_markets_add_asset_id_pool_id/: down.sql  up.sql
db/migrations/2025-06-21-111912_create_liquidation_events/: down.sql  up.sql
db/migrations/2025-06-22-085535_alter_user_borrows_user_deposits/: down.sql  up.sql
db/migrations/2025-06-23-082956_alter_navi_coin_add_feed_id/: down.sql  up.sql
db/migrations/2025-06-27-112354_alter_coins_index_pyth_feed_id/: down.sql  up.sql
db/migrations/2025-07-01-021309_create_metrics/: down.sql  up.sql
db/migrations/2025-07-01-083644_liquidation_order/: down.sql  up.sql
db/migrations/2025-07-02-074715_alter_lending_markets_add_borrow_index_supply_index/: down.sql  up.sql
db/migrations/2025-07-03-064420_create_borrowers/: down.sql  up.sql
db/migrations/2025-07-03-065017_alter_liquidation_order_unique_constraint/: down.sql  up.sql
db/migrations/2025-07-03-071832_alter_user_borrows_user_deposits_rename_wallet_address/: down.sql  up.sql
db/migrations/2025-07-04-023337_drop_navi_coins/: down.sql  up.sql
db/migrations/2025-07-04-063433_alter_user_borrow_user_deposit_alter_amount/: down.sql  up.sql
db/migrations/2025-07-07-145734_alter_coins_add_hermes_price/: down.sql  up.sql
db/migrations/2025-07-10-061529_alter_lending_markets_add_flashloan_path/: down.sql  up.sql
db/migrations/2025-07-11-092556_create_shared_objects/: down.sql  up.sql
db/migrations/2025-07-11-161106_alter_liquidation_orders_add_status/: down.sql  up.sql
db/migrations/2025-07-12-062203_alter_liquidation_orders_add_error/: down.sql  up.sql
db/migrations/2025-07-14-140651_alter_lending_markets_add_ctoken_supply/: down.sql  up.sql
db/migrations/2025-07-21-070225_alter_tables/: up.sql
db/src/: lib.rs  models.rs  repositories.rs  schema.rs
db/src/models/: borrower.rs  coin.rs  lending_market.rs  liquidation_event.rs  liquidation_order.rs  (+6 more)
mev-lib/: Cargo.toml
mev-lib/src/: config.rs  constant.rs  indexer.rs  lib.rs  service.rs  types.rs  utils.rs
server/: Cargo.toml
server/src/: main.rs
(+46 files in other folders)
