[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = { version = "0.4.8", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.9", features = [
    "postgres",
    "chrono",
    "r2d2",
    "serde_json",
] }
anyhow = "1.0"
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
serde_json = "1.0.140"
